app/design/frontend/wc/b2b_eshop/web/css/style.less
/* ... */
.category-view{
	margin-bottom: 30px;
}
.catalog-category-view .page-title-wrapper{
	position: relative;
	padding:0;
	margin-bottom: 20px;

	.page-title{
		margin: 0;
		max-width: 100%;
		margin: auto;
		font-size:2.4rem;
		padding-bottom:10px;
		text-align: left;
		font-weight: normal;
		border-bottom:solid 1px rgba(0, 0, 0, 8%);
	}
	.breadcrumbs{
		margin: 0;
		padding-left: 30px;
		padding-right: 30px;
		max-width: 100%;
		margin: 10px auto 0;
		padding: 0;
		text-align: center;
		.items{
			padding: 0;
		}
	}
}
/*===custommenu==============*/
.nav-container {
	position: relative;
	//text-align: center;
    border-top: 1px solid #ededed;
}
.nav-menu{
	background:#dedede;
}

.pt_custommenu {
	position:relative;
	vertical-align: middle;
	div.pt_menu {
		display:inline-block;
		color:@general_text_color;
		vertical-align: middle;
		&.act{
			.parentMenu{
				a{
					span{
						color: @general_link_hover_color;
						border-bottom:solid 2px;
					}			
				}
			}
		}
		&.active{
			.parentMenu{
				> a, span.block-title {
					span{
						color: @general_link_hover_color;
						border-bottom:solid 2px;
					}		
				}
			}
		}
		&#pt_menu_home {
			a {
				position: relative;

				span {
					display: inline-block;
					position: relative;

				}
				&:after{
					display: none;
				}


			} 
		}
		&.pt_menu_no_child{
			.parentMenu {
				a, span.block-title {
					&:after{
						display: none;
					}
				}
			}
		}
		&#pt_cms{
			.parentMenu {
				a, span.block-title {
					&:after{
						display: none;
					}
				}
			}
		}
		.parentMenu {
			a, span.block-title {
				padding:20px 15px 20px 0px; 
				display:inline-block;
				font-size: 1.8rem;
				position: relative;
			    font-weight: 500;
			    font-family: @headingfont;
			    span{
			    	display: inline-block;
			    	border-bottom: 2px solid  transparent;
			    }
				&:hover, &.act {
					span{
						color: @general_link_hover_color;
					}	
				}
				 &:after{
					display: inline-block;
					font-family: FontAwesome;
					font-style: normal;
					font-weight: normal;
					line-height: 1;
					-webkit-font-smoothing: antialiased;
					-moz-osx-font-smoothing: grayscale;
					content: "\f107";
					font-size: 14px;
				}
			}
			p {
				margin: 0;
				padding: 0;
			}
		}
	}

	.parentMenu a:first-child{
		padding-left:0;
	}
	div.popup {
		position:absolute;
		z-index:3000;
		left:0 !important;
		text-align:left; 	
		padding: 0;
		top:65%;
		width:100% !important;
		margin: 0;
		a {
			text-decoration: none;
			display:block;
			line-height:28px;
			&.actParent {
				color: @general_link_hover_color;
			}
			&.act {
				color: @general_link_hover_color;
			}
		}

	
		.itemMenu {
			a, h4 {
				&.level1 {
					font-weight: 400;
					line-height: 1.6;
					padding-bottom: 20px;
					font-size:1.6rem;
					display:flex;
					padding-left:20px;
					white-space: normal;
					word-wrap: break-word;
					word-break: normal;
					font-family: @bodyfont;
					&:hover,&.act {
						color: @general_link_hover_color;
					}
					span {
						display: inline-block;
					}
				}
				&.level2, &.level3 {
					text-transform:capitalize;
					font-weight: normal;
					color: #7a7a7a;
					line-height: 27px;
					white-space: normal;
					word-wrap: break-word;
					word-break: normal;
					&:hover,&.act {
						color: @general_link_hover_color;
					}					
				}
			}
		}



//13-10-21- for menu
		.block1 { 
			overflow: hidden;
			padding-top:20px;
			width:100% !important;
			margin:0;
			background: #fff;
			box-shadow: 0 3px 5px #bababa;
    		box-shadow: 0 3px 5px rgba(0,0,0,0.3);
    		margin-top:43px;
		}
		.block2 {
			margin-top: 10px;
			float: left;
		}
		.blockright {
			img {
				max-width: 100%;
			}
    	}
	}
	.category-img{
		width:30px;
		height:30px;
		text-align:center;
		margin-left:15px;
	}

	.category-img img{
		vertical-align:text-top;
	}

//13-10-21 for submenu column
	div.column {
		float:left;  
	    margin-bottom:20px;
	    width:25%;
	    &.last {
			border-right: 0 none;
			margin-right: 0;
			padding-right: 0;
	    }
	}   
	#pt_menu_link {
		padding: 0;
		.parentMenu {
			a:active, a:focus{
				color:red;
				border-bottom:solid 1px red;
			}
			ul {
				li {
					float: left;
					list-style: none;
					position: relative;
				}
			}
		}
	}  
	.clearBoth {
	    clear:both;
	}
	.menu-sale, .menu-new {
		position: absolute;
		color: #fff;
		background: url(../images/hot-sale.png) no-repeat center center;
		width:47px;
		height:31px;
		line-height: 26px;
		top: -15px;
		text-align: center;
		text-transform: uppercase;
		font-size: 1.2rem;
		right: 0;
		pointer-events: none;
		z-index: 1;
	}
	.menu-new {
		background: url(../images/news.png) no-repeat center center;
	}
}

.Cflag-wrap{
	position:absolute;
	right:0;
	top:20px;
	font-family:'wuerthbold';
}


.mobile-bar-content .Cflag-wrap{
	left:10px;
	top:5px;
}

.mobile-bar-content .Cflag-wrap span{
	font-family:'wuerthbook';
	vertical-align:middle;
}
span.Cflag{
	margin-right:10px;
	vertical-align:middle;
	display:inline-flex;
}
.Cflag-wrap span{
	vertical-align:middle;
	font-size:1.8rem;
}

#accounts ul > li, .mobile-menu div.pt_menu {
		display:block;
		border-bottom:solid 1px @general_border_color;
		text-align:left;
		padding:10px;
		margin:0;
		color:@general_product_name_color;

		.parentMenu {
			a, span.block-title {
				display:block;

			 &:after{
					font-family: FontAwesome;
					font-style: normal;
					font-weight: normal;
					line-height: 1;
					-webkit-font-smoothing: antialiased;
					-moz-osx-font-smoothing: grayscale;
					content: "\f105";
					font-size: 20px;
					position:absolute;
					padding:0 10px;
					right:0;
				}
				}
	}
	}

	#accounts ul li:first-child{
					font-family:wuerthbold;
				}
.pt_menu_link{
	.parentMenu{
		ul{
			li{
				float: left;
				margin: 0;
				margin-right: 1px;
				a{
					margin: 0;
				}
			}
		}
	}
}

.country-img{
	padding-top:20px;
}

.country-img img{
	vertical-align:middle;
	padding-right:10px;

}
/* ... */

